.happypack/s-447921783
SyntaxError: Unexpected token (61:106)

[0m [90m 59 | [39m    [36mreturn[39m (
 [90m 60 | [39m      [33m<[39m[33mWrapper[39m[33m>[39m
[31m[1m>[22m[39m[90m 61 | [39m        [33m<[39m[33mIconMenu[39m className[33m=[39m[32m'iconUser'[39m iconButtonElement[33m=[39m{[33m<[39m [33mIconButton[39m [33m>[39m [33m<[39m[33mimg[39m src[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39muser[33m.[39mphoto[33m?[39m [33m||[39m [32m'/avatar3.png'[39m} className[33m=[39m[32m"picture"[39m[33m/[39m[33m>[39m [33m<[39m [33m/[39m[33mIconButton[39m[33m>[39m} anchorOrigin[33m=[39m{{
 [90m    | [39m                                                                                                          [31m[1m^[22m[39m
 [90m 62 | [39m          horizontal[33m:[39m [32m'right'[39m[33m,[39m
 [90m 63 | [39m          vertical[33m:[39m [32m'top'[39m
 [90m 64 | [39m        }} targetOrigin[33m=[39m{{[0m

BabelLoaderError: SyntaxError: Unexpected token (61:106)

[0m [90m 59 | [39m    [36mreturn[39m (
 [90m 60 | [39m      [33m<[39m[33mWrapper[39m[33m>[39m
[31m[1m>[22m[39m[90m 61 | [39m        [33m<[39m[33mIconMenu[39m className[33m=[39m[32m'iconUser'[39m iconButtonElement[33m=[39m{[33m<[39m [33mIconButton[39m [33m>[39m [33m<[39m[33mimg[39m src[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39muser[33m.[39mphoto[33m?[39m [33m||[39m [32m'/avatar3.png'[39m} className[33m=[39m[32m"picture"[39m[33m/[39m[33m>[39m [33m<[39m [33m/[39m[33mIconButton[39m[33m>[39m} anchorOrigin[33m=[39m{{
 [90m    | [39m                                                                                                          [31m[1m^[22m[39m
 [90m 62 | [39m          horizontal[33m:[39m [32m'right'[39m[33m,[39m
 [90m 63 | [39m          vertical[33m:[39m [32m'top'[39m
 [90m 64 | [39m        }} targetOrigin[33m=[39m{{[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)